<resources>

    <string name="app_name">在庫管理アプリ</string>

    <!-- Activity title -->
    <string name="title_main">商品一覧</string>
    <string name="title_goods_register">商品の新規登録</string>
    <string name="title_goods_update">商品の更新</string>
    <string name="title_category_register">カテゴリー新規登録</string>
    <string name="title_category_update">カテゴリー更新</string>
    <string name="title_activity_check_goods">在庫チェック 商品一覧</string>

    <!-- navigation menu -->
    <string name="nav_app_description">商品の在庫を管理するためのアプリです。カテゴリーを登録してから商品を登録してください。</string>
    <string name="nav_goods_list">商品一覧</string>
    <string name="nav_category_list">カテゴリー一覧</string>
    <string name="nav_check_category_list">在庫チェック</string>
    <string name="nav_search">検索</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <!-- activity goods list -->
    <string name="list_stock_num">在庫数：</string>
    <string name="list_checked_date">在庫チェック日：</string>
    <string name="list_amount_empty_attention">※この商品は空です。</string>

    <!-- activity detail(goods update, category register etc..) -->
    <string name="label_goods_name">商品名</string>
    <string name="label_goods_category">商品のカテゴリー</string>
    <string name="label_stock_num">在庫数</string>
    <string name="label_amount_image">商品の量</string>
    <string name="label_note">その他メモ</string>

    <string name="label_category_name">カテゴリー名</string>
    <string name="label_register_goods_count">登録されている商品数：</string>
    <string name="label_delete_attention">
        ※このカテゴリーは、商品が1つ以上登録されているため削除できません。
    </string>
    <string name="label_amount_empty_attention">
        ※商品が空です。在庫が1つ以上のため、右下の補充ボタンを押して商品を補充できます。
    </string>
    <string name="label_amount_and_stock_empty_attention">
        ※商品が空で在庫もありません。在庫を1つ以上登録し、更新ボタンを押して再びこの商品を選択してください。
    </string>

    <string name="button_register">登録</string>
    <string name="button_update">更新</string>
    <string name="button_delete">削除</string>
    <string name="button_replenishment">補充</string>

    <!-- check fragment -->
    <string name="label_goods_count">チェック商品数：</string>
    <string name="title_activity_check_goods_update">CheckGoodsUpdateActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
