<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_goods_list"
            android:icon="@drawable/ic_action_document"
            android:title="@string/nav_goods_list" />
        <item
            android:id="@+id/nav_category_list"
            android:icon="@drawable/ic_action_list_2"
            android:title="@string/nav_category_list" />
        <item
            android:id="@+id/nav_check_category_list"
            android:icon="@drawable/ic_action_process_start"
            android:title="@string/nav_check_category_list" />
        <!-- <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/nav_search" /> -->
    </group>

</menu>
