<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.hotdrop.gmapp.fragment.GoodsRegisterFragment">

    <data>
        <variable name="goods" type="jp.hotdrop.gmapp.model.Goods" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/view_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_name"
                style="@style/GoodsItemLabel"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/label_goods_name" />

            <EditText
                android:id="@+id/text_name"
                style="@style/EditText"
                android:layout_below="@id/label_name"
                android:text="@={goods.name}" />

            <TextView
                android:id="@+id/label_category"
                style="@style/GoodsItemLabel"
                android:layout_below="@id/text_name"
                android:text="@string/label_goods_category" />

            <Spinner
                android:id="@+id/spinner_category"
                style="@style/GMSpinner"
                android:layout_below="@id/label_category" />

            <TextView
                android:id="@+id/label_stock"
                style="@style/GoodsItemLabel"
                android:layout_below="@id/spinner_category"
                android:text="@string/label_stock_num" />

            <Spinner
                android:id="@+id/spinner_stock"
                android:layout_width="@dimen/spinner_stock_width"
                style="@style/GMSpinner"
                android:layout_below="@id/label_stock" />

            <TextView
                android:id="@+id/label_note"
                style="@style/GoodsItemLabel"
                android:layout_marginTop="@dimen/spacing"
                android:layout_below="@id/spinner_stock"
                android:text="@string/label_note" />

            <EditText
                android:id="@+id/text_note"
                style="@style/MultiLineEditText"
                android:layout_below="@id/label_note"
                android:text="@={goods.note}" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_weight="0.2"
            android:layout_gravity="center">

            <Button
                android:id="@+id/register_button"
                style="@style/GMButton"
                android:background="@drawable/exec_button"
                android:text="@string/button_register" />

        </LinearLayout>
    </LinearLayout>
</layout>
